<resources>
    <string name="app_name">Jpec</string>

    <string name="skip">Skip</string>
    <string name="rest">Rest</string>
    <string name="start">Start</string>
    <string name="exercice_1">Exercice 1</string>
    <string name="exercice_2">Exercice 2</string>
    <string name="plus">+</string>
    <string name="exercice_01">Exercice 1 :</string>
    <string name="exercice_05">Exercice 5 :</string>
    <string name="exercice_04">Exercice 4 :</string>
    <string name="exercice_02">Exercice 2 :</string>
    <string name="your_programm_s_name">Your programm\'s name</string>
    <string name="exercice_03">Exercice 3 :</string>
    <string name="exercice_06">Exercice 6 :</string>
    <string name="exercice_07">Exercice 7 :</string>
    <string name="exercice_08">Exercice 8 :</string>
    <string name="n_serie">N° Serie :</string>
    <string name="n_rep">N° Rep :</string>
    <string name="bw">Weight ?</string>
    <string name="weight">Weight :</string>
    <string name="restt">Rest :</string>
    <string name="start_workout">Start workout !</string>
    <string name="done">Done</string>
    <string name="test">TEST</string>
    <string name="programme">Programme</string>
    <string name="choose_one">Choose one !</string>
    <string name="create_one">Create one !</string>
    <string name="jpec">Jpec</string>
    <string name="mini_goku">mini_goku</string>
    <string name="confirm_password">Confirm password :</string>
    <string name="password">Password :</string>
    <string name="register">Register</string>
    <string name="username">Username :</string>
    <string name="gokuaccueil">GokuAccueil</string>
    <string name="log_in">Log in</string>
    <string name="imglvl">imglvl</string>
    <string name="pull_ups_day_1">Pull Ups - Day 1</string>
    <string name="pull_ups_day_3">Pull Ups - Day 3</string>
    <string name="pull_ups_day_2">Pull Ups - Day 2</string>
    <string name="pull_ups_day_4">Pull Ups - Day 4</string>
    <string name="created_workouts">Created workouts</string>
    <string name="save_for_later">Save for later</string>
    <string name="restbis">Rest before next exercise :</string>
    <string name="resttest">Time to next exercise : %1$d sec</string>
    <string name="current_lvl">Current lvl :</string>
    <string name="caracteristics">Caracteristics</string>
    <string name="confirm_reini_workout1m">Which workout would you like to override ?</string>
    <string name="quit">Quit workout</string>
    <string name="main">Main Activity</string>
    <string name="log_out">Log out</string>
    <string name="pullup_count">Number of pulls ups : %1$d</string>
    <string name="pull_up_test">Pull up test</string>
    <string name="result">Y : %1$f       up : %2$b     ev-y : %3$f</string>


    <string-array name="initworkout">
        <item>The first one</item>
        <item>The second one</item>
        <item>The third one</item>
        <item>The 4th one</item>
        <item>The 5th one</item>
        <item>The 6th one</item>
        <item>The 7th one</item>
        <item>The 8th one</item>
        <item>The 9th one</item>
        <item>The 10th one</item>
        <item>None of them</item>
    </string-array>
    <string-array name="listofexos">
        <item>Leg</item>
        <item>Bulgarian Split</item>
        <item>Lunge</item>
        <item>Squat</item>
        <item>Squat Hold</item>

        <item>Chest</item>
        <item>Narrow Push Up</item>
        <item>Pike Push Up</item>

    </string-array>
<!-- Division des exos en ensemble correspondant à un muscle-->
    <string-array name="exolist_leg">
        <item>Squat</item>
        <item>Squat Hold</item>
        <item>Lunge</item>
    </string-array>
    <string-array name="exolist_pec">
        <item>Narrow Push Up</item>
        <item>Pike Push Up</item>
    </string-array>

    <!-- Fin de la division en ensemble-->


    <style name="commontext">
        <item name="android:textSize">20sp</item>
    </style>

    <style name="titletext">
        <item name="android:textSize">30sp</item>
    </style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="leg">Leg</string>
    <string name="abs">Abs</string>
    <string name="close">Close</string>


</resources>

