<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jpec.test.WorkoutFragment">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UselessParent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pec"
        android:text="@string/chest"
        tools:ignore="ButtonStyle" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="@string/back"
        tools:ignore="ButtonStyle" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leg"
        android:text="@string/leg"
        tools:ignore="ButtonStyle" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/abs"
        android:id="@+id/abs"
        android:layout_height="wrap_content"
        tools:ignore="ButtonStyle" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/done"
        android:text="@string/done"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spin1"/>

</LinearLayout>


</FrameLayout>
