<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jpec"
        android:id="@+id/jpec"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="240sp"
        android:layout_marginTop="20sp"
        android:layout_height="318sp"
        android:layout_gravity="center"
        android:src="@drawable/mini_goku"
        android:contentDescription="@string/mini_goku" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_one"
            android:onClick="onClick"
            android:id="@+id/create_prog"
            android:layout_marginRight="30sp"
            android:layout_marginEnd="30sp"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_one"
            android:onClick="onClick"
            android:id="@+id/choose_prog"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="20sp"
        android:id="@+id/logout"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        tools:ignore="ButtonStyle" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:id="@+id/test"
        android:text="@string/pull_up_test"
        tools:ignore="ButtonStyle" />
</LinearLayout>

    </LinearLayout>


</ScrollView>