<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jpec"
            android:id="@+id/username"
            android:layout_gravity="center_horizontal"
/>


        <ImageView
            android:layout_width="86dp"
            android:id="@+id/imglvl"
            android:layout_height="188dp"
            android:contentDescription="@string/imglvl"
            android:src="@drawable/krillin"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentlvl"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_lvl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caracteristics" />



    </LinearLayout>




</ScrollView>