<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/goku"
        android:alpha="0.5"
        android:layout_height="match_parent"
        android:contentDescription="@string/gokuaccueil" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/unamev"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uname"
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:id="@+id/passv"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass"
            android:inputType="textPassword" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/log_in"
                android:onClick="onClick"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/register"
                android:onClick="onClick"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


    </LinearLayout>






</RelativeLayout>